tests/lime/pass/bugs/args/copy_macro.wsa
copy 1
copy macro hello [copy 3] 2
hello
