tests/lime/fail/tokens/macro_first/byte_49.wsa
macro 1 [push 49] 1
